@@ -375,7 +375,6 @@
   <block id="e67f7cfa37e5dcd4f3836e76f5301a68" category="inline-image-macro">Capture d'écran de la page pour modifier la capacité de stockage et les valeurs d'IOPS.</block>
   <block id="f5aa006a4894acbba121bdb32f513ead" category="paragraph"><block ref="f5aa006a4894acbba121bdb32f513ead" category="inline-image-macro-rx" type="image"></block></block>
   <block id="1c17ed8503d69fa2ad1c61b6c92a2255" category="list-text">Le taux d'utilisation maximal recommandé est de 80 % pour le maintien des performances du Tiering des données et la possibilité d'ajouter de la capacité pour des données supplémentaires.</block>
-  <block id="e8036e0ac9189e05af8ebeb943ee3fd3" category="list-text">La sélection de *Automatic* IOPS conserve un ratio de trois IOPS SSD provisionnées par Gio de stockage primaire jusqu'à 80,000. Vous ne pouvez pas provisionner manuellement une valeur d'IOPS supérieure ou égale à 80,000.</block>
   <block id="d179171b709f127d6b88e332ad5ac396" category="list-text">Cochez la case pour confirmer que l'évolution de la capacité de stockage affecte le coût du service FSX pour ONTAP et que d'autres modifications ne peuvent pas être effectuées pendant six heures.</block>
   <block id="1f25673463b8f906d801bd291ad45315" category="list-text">Sélectionnez *mettre à jour* pour confirmer vos modifications.</block>
   <block id="b3fee7abcfd59e1f7a4b591d94eea26b" category="section-title">Supprimez FSX pour ONTAP de l'espace de travail</block>
@@ -692,7 +691,6 @@
   <block id="ad0ae9ea1f2e8d973a9a0f6bb169f494" category="inline-image-macro">Icône avec trois points qui apparaît dans la dernière colonne du tableau</block>
   <block id="98efef1c8a47ed5791b41944e8ff4ec2" category="list-text">Pour gérer un dossier de demande de support existant, cliquez sur <block ref="a0b152b50a56901a75affebabc26ed61" category="inline-image-macro-rx" type="image"></block> et en sélectionnant l'une des options disponibles :</block>
   <block id="6d9dd74e7709ef802d299966f7898f6b" category="list-text">*Voir cas*: Afficher tous les détails sur un cas spécifique.</block>
-  <block id="482429810c2b00a4fa04f9900c560232" category="list-text">*Mettre à jour les notes de cas* : fournir des détails supplémentaires sur votre problème.</block>
   <block id="f791bc685c526af8296381acff10f6a0" category="list-text">*Fermer le cas* : fournissez des détails sur la raison pour laquelle vous fermez le cas et cliquez sur *Fermer le cas*.</block>
   <block id="e93217b2f709a398ce3c0fb753beb05f" category="inline-image-macro">Capture d'écran qui montre les actions que vous pouvez effectuer après avoir sélectionné le menu dans la dernière colonne du tableau.</block>
   <block id="e9a5c374fb47ed2ae5cc6108fb36d829" category="paragraph"><block ref="e9a5c374fb47ed2ae5cc6108fb36d829" category="inline-image-macro-rx" type="image"></block></block>
@@ -737,4 +735,17 @@
   <block id="39eff6a0e62a9e3eafb92d6d0dc18004" category="doc">Créez des volumes pour Amazon FSX pour NetApp ONTAP</block>
   <block id="7aa1575aeeddba65d55707b41584cd4a" category="sidebar">Utilisez Amazon FSX pour NetApp ONTAP</block>
   <block id="c82c15e6d66564201da1f424b2fb9bf4" category="sidebar">Documents relatifs à Amazon FSX pour NetApp ONTAP</block>
+  <block id="a3ef479db7087d8c91c8e7225a427426" category="list-text">Si vous sélectionnez *Automatic* IOPS, le ratio de trois IOPS SSD provisionnées par Gio de stockage primaire est maintenu jusqu'à 160,000. Vous ne pouvez pas provisionner manuellement une valeur d'IOPS supérieure à 160,000.</block>
+  <block id="ee7de532c8affb3659d9d80ec396fef5" category="list-text">Si vous le souhaitez, sélectionnez l'option d'optimisation pour créer une FlexGroup et distribuer les données de volume au sein du cluster.</block>
+  <block id="d22ff9012fce506ed1f2c7ba6e00a0e6" category="admonition">La distribution FlexGroup est disponible uniquement pour les protocoles de volume NFS et CIFS.</block>
+  <block id="953d80d6f5efbc162c05017004c6791a" category="list-text">Si vous avez sélectionné optimisation (FlexGroup), vous devez spécifier le nombre de composants dans lesquels distribuer les données de volume. Nous recommandons vivement d'utiliser un nombre pair de composants pour assurer une distribution uniforme des données. La meilleure pratique est de 8 constituants.</block>
+  <block id="2447632b449c054d670473aa08500256" category="inline-image-macro">Capture d'écran du champ permettant de spécifier le nombre de composants à distribuer les données de volume.</block>
+  <block id="e8a33687845a8222ff0797ef7fa10d6a" category="paragraph"><block ref="e8a33687845a8222ff0797ef7fa10d6a" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="88c49608e723add593f5becc8bd9a968" category="section-title">02 avril 2023</block>
+  <block id="cabf1912632a0d24145c02f00dc7d6b2" category="inline-link-macro">Créez un FlexGroup sur FSX pour ONTAP</block>
+  <block id="9a2a26c33c1a0f6b14b7bb3a214dbaf0" category="list-text">C'est possible maintenant <block ref="5e895283a25d01b135da63bdfcfdf72e" category="inline-link-macro-rx"></block> des volumes qui distribuent les données de volume au sein du cluster.</block>
+  <block id="9af9b754c1d16f271c1e6f4b1b2c4f4d" category="list-text">La limite IOPS est augmentée pour permettre un provisionnement manuel ou automatique jusqu'à 160,000.</block>
+  <block id="c7f5c1a75acc58c6f004efc0ce1eba09" category="list-text">*Pièce jointe (facultatif)* : téléchargez jusqu'à cinq pièces jointes, une à la fois.</block>
+  <block id="bfa80e7aaad6da353b431bff3a0e12d6" category="paragraph">Les pièces jointes sont limitées à 25 Mo par fichier. Les extensions de fichier suivantes sont prises en charge : txt, log, PDF, jpg/JPEG, rtf, doc/docx, xls/xlsx et csv.</block>
+  <block id="8e6b52a532a4fbbfc98dca3ebfa5f1e6" category="list-text">*Mettre à jour les notes de cas* : fournir des détails supplémentaires sur votre problème ou sélectionner *Télécharger les fichiers* pour joindre jusqu'à cinq fichiers.</block>
 </blocks>
