@@ -18,6 +18,14 @@ Découvrez les nouveautés d'Amazon FSX pour NetApp ONTAP.
 
 
 
+== 02 avril 2023
+
+* C'est possible maintenant link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/use/task-add-fsx-volumes.html#create-volumes["Créez un FlexGroup sur FSX pour ONTAP"^] des volumes qui distribuent les données de volume au sein du cluster.
+* La limite IOPS est augmentée pour permettre un provisionnement manuel ou automatique jusqu'à 160,000.
+
+
+
+
 == 05 mars 2023
 
 Des améliorations ont été apportées à l'interface utilisateur et des captures d'écran ont été mises à jour dans la documentation.
